Improving performance, profile checks, fixing Hand (D), remove Hand (E)