@@ -1,31 +1,34 @@
 package dev.brighten.anticheat.utils;
 
 import cc.funkemunky.api.utils.KLocation;
+import cc.funkemunky.api.utils.objects.evicting.ConcurrentEvictingList;
+import cc.funkemunky.api.utils.objects.evicting.EvictingList;
 import org.bukkit.Location;
 
 import java.util.Comparator;
+import java.util.Deque;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.stream.Collectors;
 
 public class PastLocation {
-    public List<KLocation> previousLocations = new CopyOnWriteArrayList<>();
+    private final EvictingList<KLocation> previousLocations = new EvictingList<>(20);
 
     public KLocation getPreviousLocation(long time) {
-        return (this.previousLocations.stream()
+        return (this.getPreviousLocations().stream()
                 .min(Comparator.comparing(loc -> Math.abs(time - loc.timeStamp)))
-                .orElse(this.previousLocations.get(0)));
+                .orElse(this.getPreviousLocations().getFirst()));
     }
 
     public List<KLocation> getEstimatedLocation(long time, long ping, long delta) {
-        return this.previousLocations
+        return this.getPreviousLocations()
                 .stream()
                 .filter(loc -> time - loc.timeStamp > 0 && Math.abs(time - loc.timeStamp - ping) < delta)
                 .collect(Collectors.toList());
     }
 
     public List<KLocation> getEstimatedLocation(long time, long ping) {
-        return this.previousLocations.stream()
+        return this.getPreviousLocations().stream()
                 .filter(loc -> time - loc.timeStamp > 0
                         && time - loc.timeStamp <= ping + (ping < 50 ? 100 : 50))
                 .collect(Collectors.toList());
@@ -34,34 +37,30 @@ public class PastLocation {
     public List<KLocation> getPreviousRange(long delta) {
         long stamp = System.currentTimeMillis();
 
-        return this.previousLocations.stream()
+        return this.getPreviousLocations().stream()
                 .filter(loc -> stamp - loc.timeStamp < delta)
                 .collect(Collectors.toList());
     }
 
     public void addLocation(Location location) {
-        if (previousLocations.size() >= 20) {
-            previousLocations.remove(0);
-        }
+        getPreviousLocations().add(new KLocation(location));
+    }
 
-        previousLocations.add(new KLocation(location));
+    public synchronized EvictingList<KLocation> getPreviousLocations() {
+        return previousLocations;
     }
 
     public KLocation getLast() {
-        if(previousLocations.size() == 0) return null;
-        return previousLocations.get(previousLocations.size() - 1);
+        if(getPreviousLocations().size() == 0) return null;
+        return getPreviousLocations().getLast();
     }
 
     public KLocation getFirst() {
-        if(previousLocations.size() == 0) return null;
-        return previousLocations.get(0);
+        if(getPreviousLocations().size() == 0) return null;
+        return getPreviousLocations().getFirst();
     }
 
     public void addLocation(KLocation location) {
-        if (previousLocations.size() >= 20) {
-            previousLocations.remove(0);
-        }
-
-        previousLocations.add(location.clone());
+        getPreviousLocations().add(location.clone());
     }
 }
